--- a/.github/workflows/Discord-notification.yml
+++ b/.github/workflows/Discord-notification.yml
@@ -13,3 +13,5 @@ jobs:
         webhook_id: ${{ secrets.WEBHOOK_ID }}
         webhook_token: ${{ secrets.WEBHOOK_TOKEN }}
         args: The ${{ github.event_name }} event triggered first step.
+        color: "#48f442"
+        username: "GitHub Update UwU"
